Test Calls added to the app for appcenter ios

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,9 @@
-use_frameworks!
+#use_frameworks!
 
-platform :ios, '9.0'
+#platform :ios, '12.0'
 
 target 'Rudder-AppCenter_Example' do
-  pod 'Rudder-AppCenter', :path => '../'
+  pod 'Rudder-AppCenter'
 
   target 'Rudder-AppCenter_Tests' do
     inherit! :search_paths
