--- a/.github/workflows/slack-notify.yml
+++ b/.github/workflows/slack-notify.yml
@@ -14,7 +14,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.23.0
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-          PROJECT_NAME: 'iOS Firebase SDK'
+          PROJECT_NAME: 'iOS App Center SDK'
         with:
           channel-id: 'CTAGMVC3C'
           payload: |
